--- a/data/cities/broken-arrow/family-drug.yml
+++ b/data/cities/broken-arrow/family-drug.yml
@@ -8,4 +8,4 @@ street: East Lansing Street
 housenumber: "1030"
 phone: +1 918 251 3784
 opening_hours: Mo-Fr 09:00-19:00; Sa 09:00-14:00
-website: ""
+website: https://www.bafamilydrug.com/
